Fix: Add support for Ices and Souls currencies in parse_price()
- Added support for 'Ices' currency (Tuscaran Glacier merchants)
- Added support for 'Souls' currency (Epic dungeon merchants)
- Fixed item ID 153954 and other Epic dungeon items showing no price
- Updated ITEMS_DATABASE_TECHNICAL_DOCUMENTATION.md to v2.2
- Updated ARMORY_TECHNICAL_DOCUMENTATION.md to v2.2
- Documented Database Editor improvements (ProgressStepsDialog, bug fixes)
- Added comprehensive currency documentation (11 total currencies)

--- a/Language/en.json
+++ b/Language/en.json
@@ -852,10 +852,33 @@
         "advanced_group_title": "⚙️ Advanced Operations",
         "clean_duplicates_button": "🧹 Clean Duplicates",
         "clean_duplicates_tooltip": "Remove duplicate items from source database",
-        "refresh_items_button": "🔄 Refresh All Items",
-        "refresh_items_tooltip": "Re-scrape all items from Eden to update data (Model, DPS, Speed, etc.)",
+        "single_refresh_button": "🔍 Single Item Refresh",
+        "single_refresh_tooltip": "Re-scrape specific items from Eden to update their data (Model, DPS, Speed, etc.)",
+        "all_refresh_button": "🔄 All Items Refresh",
+        "all_refresh_tooltip": "Re-scrape all items from Eden to update their data (Model, DPS, Speed, etc.)",
         "database_editor_button": "🗄️ Database Editor",
         "database_editor_tooltip": "Open editor to directly modify items_database_src.json",
+        "single_refresh_input_title": "🔍 Single Item Refresh",
+        "single_refresh_input_message": "Enter item names to refresh (comma-separated):\n\nExamples:\n• Cloth Cap\n• Cudgel of the Undead, Soulbinder's Belt\n• Ring of the Azure\n\n⚠️ Exact case-sensitive names required",
+        "single_refresh_no_items": "No valid items entered.",
+        "single_refresh_confirm": "Selected items ({count}):\n\n",
+        "all_refresh_confirm_title": "Confirm All Items Refresh",
+        "all_refresh_confirm_message": "Refresh ALL items from the source database?\n\nThis will re-scrape all items from Eden Herald to update:\n• Model ID (for future 3D rendering)\n• DPS, Speed, Damage Type (weapons)\n• Type, Slot (equipment)\n• Merchant price and zone\n\n",
+        "all_refresh_warning": "This operation may take several minutes.",
+        "all_refresh_filter_message": "Do you want to bypass utility/level filters for ALL items?\n\n✅ YES = Skip filters (get all variants)\n❌ NO = Apply filters (utility ≥ 100, level ≥ 50)\n\n⚠️ This will affect ALL items in the database",
+        "filter_bypass_title": "Filter Bypass",
+        "filter_bypass_message": "Do you want to bypass utility/level filters?\n\n✅ YES = Skip filters (get all variants)\n❌ NO = Apply filters (utility ≥ 100, level ≥ 50)",
+        "filter_status": "Filters:",
+        "filter_bypassed": "BYPASSED",
+        "filter_active": "ACTIVE",
+        "confirm_title": "Confirm",
+        "confirm_continue": "Continue?",
+        "refresh_error": "Refresh error",
+        "auto_backup": "An automatic backup will be created.",
+        "database_import_button": "🔧 Database Management Tools",
+        "database_import_tooltip": "Open Database Management Tools window to select and import templates into source database",
+        "refresh_items_button": "🔄 Refresh All Items",
+        "refresh_items_tooltip": "Re-scrape all items from Eden to update data (Model, DPS, Speed, etc.)",
         "clean_removed_count": "Items removed",
         "no_files_selected_title": "No Files",
         "no_files_selected_message": "Please select at least one .txt file",
@@ -1078,7 +1101,16 @@
             "wealth_scraping_albion": "Scraping Albion",
             "wealth_scraping_midgard": "Scraping Midgard",
             "wealth_scraping_hibernia": "Scraping Hibernia",
-            "wealth_calculate_total": "Calculating total"
+            "wealth_calculate_total": "Calculating total",
+            "db_editor_connect": "Connecting to Eden Herald",
+            "db_editor_refresh_items": "Refreshing items",
+            "db_editor_save": "Saving database",
+            "db_editor_search_variants": "Searching for all variants",
+            "db_editor_process_variants": "Processing found variants",
+            "db_editor_batch_refresh": "Batch refreshing",
+            "db_editor_batch_search": "Batch searching for variants",
+            "db_editor_batch_process": "Batch processing variants",
+            "db_editor_results": "Displaying results"
         },
         "stats_update": {
             "title": "📊 Updating statistics...",
