--- a/Language/fr.json
+++ b/Language/fr.json
@@ -852,10 +852,33 @@
         "advanced_group_title": "⚙️ Opérations Avancées",
         "clean_duplicates_button": "🧹 Nettoyer les doublons",
         "clean_duplicates_tooltip": "Supprimer les items en double dans la base source",
-        "refresh_items_button": "🔄 Rafraîchir tous les items",
-        "refresh_items_tooltip": "Re-scraper tous les items depuis Eden pour mettre à jour les données (Model, DPS, Speed, etc.)",
+        "single_refresh_button": "🔍 Rafraîchir Items Spécifiques",
+        "single_refresh_tooltip": "Re-scraper des items spécifiques depuis Eden pour mettre à jour leurs données (Model, DPS, Speed, etc.)",
+        "all_refresh_button": "🔄 Rafraîchir Tous les Items",
+        "all_refresh_tooltip": "Re-scraper tous les items depuis Eden pour mettre à jour leurs données (Model, DPS, Speed, etc.)",
         "database_editor_button": "🗄️ Éditeur de Base de Données",
         "database_editor_tooltip": "Ouvrir l'éditeur pour modifier directement items_database_src.json",
+        "single_refresh_input_title": "🔍 Rafraîchir Items Spécifiques",
+        "single_refresh_input_message": "Entrez les noms des items à rafraîchir (séparés par des virgules) :\n\nExemples :\n• Cloth Cap\n• Cudgel of the Undead, Soulbinder's Belt\n• Ring of the Azure\n\n⚠️ Respecter la casse exacte (majuscules/minuscules)",
+        "single_refresh_no_items": "Aucun item valide saisi.",
+        "single_refresh_confirm": "Items sélectionnés ({count}) :\n\n",
+        "all_refresh_confirm_title": "Confirmer le Rafraîchissement Global",
+        "all_refresh_confirm_message": "Rafraîchir TOUS les items de la base source ?\n\nCeci va re-scraper tous les items depuis Eden Herald pour mettre à jour :\n• Model ID (pour futur rendu 3D)\n• DPS, Speed, Damage Type (armes)\n• Type, Slot (équipement)\n• Prix et zone marchand\n\n",
+        "all_refresh_warning": "Cette opération peut prendre plusieurs minutes.",
+        "all_refresh_filter_message": "Voulez-vous ignorer les filtres utility/niveau pour TOUS les items ?\n\n✅ OUI = Ignorer les filtres (obtenir toutes les variantes)\n❌ NON = Appliquer les filtres (utility ≥ 100, niveau ≥ 50)\n\n⚠️ Ceci affectera TOUS les items de la base",
+        "filter_bypass_title": "Ignorer les Filtres",
+        "filter_bypass_message": "Voulez-vous ignorer les filtres utility/niveau ?\n\n✅ OUI = Ignorer les filtres (obtenir toutes les variantes)\n❌ NON = Appliquer les filtres (utility ≥ 100, niveau ≥ 50)",
+        "filter_status": "Filtres :",
+        "filter_bypassed": "IGNORÉS",
+        "filter_active": "ACTIFS",
+        "confirm_title": "Confirmer",
+        "confirm_continue": "Continuer ?",
+        "refresh_error": "Erreur de rafraîchissement",
+        "auto_backup": "Une sauvegarde automatique sera créée.",
+        "database_import_button": "🔧 Outils de Gestion Base de Données",
+        "database_import_tooltip": "Ouvrir la fenêtre Database Management Tools pour sélectionner et importer des templates dans la base source",
+        "refresh_items_button": "🔄 Rafraîchir tous les items",
+        "refresh_items_tooltip": "Re-scraper tous les items depuis Eden pour mettre à jour les données (Model, DPS, Speed, etc.)",
         "clean_removed_count": "Items supprimés",
         "no_files_selected_title": "Aucun fichier",
         "no_files_selected_message": "Veuillez sélectionner au moins un fichier .txt",
@@ -1078,7 +1101,16 @@
             "wealth_scraping_albion": "Scraping Albion",
             "wealth_scraping_midgard": "Scraping Midgard",
             "wealth_scraping_hibernia": "Scraping Hibernia",
-            "wealth_calculate_total": "Calcul du total"
+            "wealth_calculate_total": "Calcul du total",
+            "db_editor_connect": "Connexion à Eden Herald",
+            "db_editor_refresh_items": "Rafraîchissement des items",
+            "db_editor_save": "Sauvegarde de la base de données",
+            "db_editor_search_variants": "Recherche de toutes les variantes",
+            "db_editor_process_variants": "Traitement des variantes trouvées",
+            "db_editor_batch_refresh": "Rafraîchissement en lot",
+            "db_editor_batch_search": "Recherche en lot des variantes",
+            "db_editor_batch_process": "Traitement en lot des variantes",
+            "db_editor_results": "Affichage des résultats"
         },
         "stats_update": {
             "title": "📊 Mise à jour des statistiques...",
