--- a/Language/de.json
+++ b/Language/de.json
@@ -852,10 +852,33 @@
         "advanced_group_title": "⚙️ Erweiterte Operationen",
         "clean_duplicates_button": "🧹 Duplikate bereinigen",
         "clean_duplicates_tooltip": "Doppelte Gegenstände aus Quell-Datenbank entfernen",
-        "refresh_items_button": "🔄 Alle Gegenstände aktualisieren",
-        "refresh_items_tooltip": "Alle Gegenstände von Eden neu laden um Daten zu aktualisieren (Modell, DPS, Geschwindigkeit, usw.)",
+        "single_refresh_button": "🔍 Einzelne Gegenstände aktualisieren",
+        "single_refresh_tooltip": "Bestimmte Gegenstände von Eden neu laden um Daten zu aktualisieren (Modell, DPS, Geschwindigkeit, usw.)",
+        "all_refresh_button": "🔄 Alle Gegenstände aktualisieren",
+        "all_refresh_tooltip": "Alle Gegenstände von Eden neu laden um Daten zu aktualisieren (Modell, DPS, Geschwindigkeit, usw.)",
         "database_editor_button": "🗄️ Datenbank-Editor",
         "database_editor_tooltip": "Editor öffnen, um items_database_src.json direkt zu bearbeiten",
+        "single_refresh_input_title": "🔍 Einzelne Gegenstände aktualisieren",
+        "single_refresh_input_message": "Geben Sie die Namen der zu aktualisierenden Gegenstände ein (durch Kommas getrennt):\n\nBeispiele:\n• Cloth Cap\n• Cudgel of the Undead, Soulbinder's Belt\n• Ring of the Azure\n\n⚠️ Exakte groß-/kleinschreibungsempfindliche Namen erforderlich",
+        "single_refresh_no_items": "Keine gültigen Gegenstände eingegeben.",
+        "single_refresh_confirm": "Ausgewählte Gegenstände ({count}):\n\n",
+        "all_refresh_confirm_title": "Alle Gegenstände aktualisieren bestätigen",
+        "all_refresh_confirm_message": "ALLE Gegenstände aus der Quell-Datenbank aktualisieren?\n\nDies wird alle Gegenstände von Eden Herald neu laden um zu aktualisieren:\n• Modell-ID (für zukünftiges 3D-Rendering)\n• DPS, Geschwindigkeit, Schadenstyp (Waffen)\n• Typ, Slot (Ausrüstung)\n• Händlerpreis und -zone\n\n",
+        "all_refresh_warning": "Dieser Vorgang kann mehrere Minuten dauern.",
+        "all_refresh_filter_message": "Möchten Sie Nutzen-/Levelfilter für ALLE Gegenstände umgehen?\n\n✅ JA = Filter überspringen (alle Varianten erhalten)\n❌ NEIN = Filter anwenden (Nutzen ≥ 100, Level ≥ 50)\n\n⚠️ Dies betrifft ALLE Gegenstände in der Datenbank",
+        "filter_bypass_title": "Filter umgehen",
+        "filter_bypass_message": "Möchten Sie Nutzen-/Levelfilter umgehen?\n\n✅ JA = Filter überspringen (alle Varianten erhalten)\n❌ NEIN = Filter anwenden (Nutzen ≥ 100, Level ≥ 50)",
+        "filter_status": "Filter:",
+        "filter_bypassed": "UMGANGEN",
+        "filter_active": "AKTIV",
+        "confirm_title": "Bestätigen",
+        "confirm_continue": "Fortfahren?",
+        "refresh_error": "Aktualisierungsfehler",
+        "auto_backup": "Ein automatisches Backup wird erstellt.",
+        "database_import_button": "🔧 Datenbank-Verwaltungstools",
+        "database_import_tooltip": "Datenbank-Verwaltungstools-Fenster öffnen, um Vorlagen in Quell-Datenbank auszuwählen und zu importieren",
+        "refresh_items_button": "🔄 Alle Gegenstände aktualisieren",
+        "refresh_items_tooltip": "Alle Gegenstände von Eden neu laden um Daten zu aktualisieren (Modell, DPS, Geschwindigkeit, usw.)",
         "clean_removed_count": "Entfernte Gegenstände",
         "no_files_selected_title": "Keine Dateien",
         "no_files_selected_message": "Bitte mindestens eine .txt-Datei auswählen",
@@ -1078,7 +1101,16 @@
             "wealth_scraping_albion": "Scraping Albion",
             "wealth_scraping_midgard": "Scraping Midgard",
             "wealth_scraping_hibernia": "Scraping Hibernia",
-            "wealth_calculate_total": "Gesamtberechnung"
+            "wealth_calculate_total": "Gesamtberechnung",
+            "db_editor_connect": "Verbindung zu Eden Herald",
+            "db_editor_refresh_items": "Aktualisierung der Items",
+            "db_editor_save": "Datenbank speichern",
+            "db_editor_search_variants": "Suche nach allen Varianten",
+            "db_editor_process_variants": "Verarbeitung der gefundenen Varianten",
+            "db_editor_batch_refresh": "Batch-Aktualisierung",
+            "db_editor_batch_search": "Batch-Suche nach Varianten",
+            "db_editor_batch_process": "Batch-Verarbeitung der Varianten",
+            "db_editor_results": "Anzeige der Ergebnisse"
         },
         "stats_update": {
             "title": "📊 Statistiken werden aktualisiert...",
