feat: add Credits & About dialog with theme-aware UI
- Create new AboutDialog with 3 tabs (About, Credits, License)
- Credits tab with hardcoded HTML (no CREDITS.md dependency for exe)
- Theme-aware colors (auto-detect dark/light theme)
- Improved title visibility (#FFFFFF for dark theme)
- All QTextBrowser with transparent background
- Credits include: DOL, Eden DAOC, Eve-of-Darkness, Morfuin/Leifur, Laelly
- Remove License Info and Contributing sections from app (kept in CREDITS.md)
- Add translations FR/EN/DE for About dialog
- Update README.md with Credits section

--- a/Language/de.json
+++ b/Language/de.json
@@ -7,6 +7,17 @@
         "character_sheet_title": "Charakterbogen - {name}"
     },
     "dialogs": {
+        "about_dialog": {
+            "tab_about": "Über",
+            "tab_credits": "Danksagungen",
+            "tab_license": "Lizenz",
+            "description_title": "Beschreibung",
+            "description_text": "Charakterverwaltungsanwendung für Dark Age of Camelot (DAOC), entwickelt in Python mit PySide6.",
+            "creator_title": "Entwickler",
+            "repository_title": "Repository",
+            "license_title": "Lizenz",
+            "license_text": "[LIZENZ NOCH ZU BESTIMMEN]"
+        },
         "new_character": {
             "existing_character_label": "Bestehender Charakter:",
             "title": "Neuer Charakter",
