--- a/Language/fr.json
+++ b/Language/fr.json
@@ -90,7 +90,7 @@
             "creator_title": "Créateur",
             "repository_title": "Dépôt",
             "license_title": "Licence",
-            "license_text": "[LICENCE À DÉTERMINER]"
+            "license_text": "Licence MIT - Copyright © 2025 Christophe Pelichet (Ewoline)"
         },
         "stats_info": {
             "title": "À propos des statistiques",
