feat: add manual database backup button in SuperAdmin Settings
- Add backup button in Advanced Operations section
- Database backups compressed as ZIP (zipfile.ZIP_DEFLATED)
- Uses centralized backup system configuration
- Backups stored in <backup_path>/Database/ folder
- SuperAdminTools now accepts config_manager parameter (optional)
- Translations added (FR/EN/DE)
- Documentation updated to v0.108

--- a/Language/de.json
+++ b/Language/de.json
@@ -888,6 +888,13 @@
         "auto_backup": "Ein automatisches Backup wird erstellt.",
         "database_import_button": "🔧 Datenbank-Verwaltungstools",
         "database_import_tooltip": "Datenbank-Verwaltungstools-Fenster öffnen, um Vorlagen in Quell-Datenbank auszuwählen und zu importieren",
+        "backup_database_button": "💾 Datenbank Sichern",
+        "backup_database_tooltip": "Erstellen Sie ein manuelles Backup von items_database_src.json",
+        "backup_success_title": "Sicherung Erfolgreich",
+        "backup_success_message": "Datenbank erfolgreich gesichert:\n\n",
+        "backup_error_title": "Sicherungsfehler",
+        "backup_error_message": "Fehler beim Sichern:\n\n",
+        "backup_unexpected_error": "Unerwarteter Fehler:\n\n",
         "refresh_items_button": "🔄 Alle Gegenstände aktualisieren",
         "refresh_items_tooltip": "Alle Gegenstände von Eden neu laden um Daten zu aktualisieren (Modell, DPS, Geschwindigkeit, usw.)",
         "clean_removed_count": "Entfernte Gegenstände",
