--- a/Language/en.json
+++ b/Language/en.json
@@ -888,6 +888,13 @@
         "auto_backup": "An automatic backup will be created.",
         "database_import_button": "🔧 Database Management Tools",
         "database_import_tooltip": "Open Database Management Tools window to select and import templates into source database",
+        "backup_database_button": "💾 Backup Database",
+        "backup_database_tooltip": "Create a manual backup of items_database_src.json",
+        "backup_success_title": "Backup Successful",
+        "backup_success_message": "Database backed up successfully:\n\n",
+        "backup_error_title": "Backup Error",
+        "backup_error_message": "Error during backup:\n\n",
+        "backup_unexpected_error": "Unexpected error:\n\n",
         "refresh_items_button": "🔄 Refresh All Items",
         "refresh_items_tooltip": "Re-scrape all items from Eden to update data (Model, DPS, Speed, etc.)",
         "clean_removed_count": "Items removed",
