--- a/Language/fr.json
+++ b/Language/fr.json
@@ -888,6 +888,13 @@
         "auto_backup": "Une sauvegarde automatique sera créée.",
         "database_import_button": "🔧 Outils de Gestion Base de Données",
         "database_import_tooltip": "Ouvrir la fenêtre Database Management Tools pour sélectionner et importer des templates dans la base source",
+        "backup_database_button": "💾 Sauvegarder la Base de Données",
+        "backup_database_tooltip": "Créer une sauvegarde manuelle de items_database_src.json",
+        "backup_success_title": "Sauvegarde Réussie",
+        "backup_success_message": "Base de données sauvegardée avec succès :\n\n",
+        "backup_error_title": "Erreur de Sauvegarde",
+        "backup_error_message": "Erreur lors de la sauvegarde :\n\n",
+        "backup_unexpected_error": "Erreur inattendue :\n\n",
         "refresh_items_button": "🔄 Rafraîchir tous les items",
         "refresh_items_tooltip": "Re-scraper tous les items depuis Eden pour mettre à jour les données (Model, DPS, Speed, etc.)",
         "clean_removed_count": "Items supprimés",
