feat(db-editor): add model image preview button
- Add  button next to Model ID field in Database Editor
- Opens preview dialog showing item model image (Img/Models/items/{id}.webp)
- Dialog features:
  * Full image display with max 512x512 scaling
  * Model ID info label
  * Close button
- Translations added (FR/EN/DE):
  * view_model_tooltip
  * no_model_id
  * model_not_found
  * model_preview_title
  * model_id_label
  * view_model_error
- Follows same pattern as Eden ID link button
- Validates model ID existence before opening preview

--- a/Language/de.json
+++ b/Language/de.json
@@ -974,7 +974,13 @@
         "reload_title": "Datenbank neu laden",
         "reload_confirm": "Datenbank aus Datei neu laden?\n\nAlle nicht gespeicherten Änderungen gehen verloren!",
         "save_error": "Fehler beim Speichern der Datenbank:\n{error}",
-        "enter_field_placeholder": "{field} eingeben..."
+        "enter_field_placeholder": "{field} eingeben...",
+        "view_model_tooltip": "Modellbild anzeigen",
+        "no_model_id": "Keine Modell-ID für dieses Item verfügbar.",
+        "model_not_found": "Modellbild nicht gefunden:\n{path}",
+        "model_preview_title": "Modellvorschau - ID: {id}",
+        "model_id_label": "Modell-ID",
+        "view_model_error": "Fehler beim Anzeigen des Modellbildes"
     },
     "armoury_dialog": {
         "title": "Waffenkammer-Verwaltung - {name} ({realm} - {season})",
