Add: Config option to enable/disable Items Database HTML debug saving
FEATURE:
- New setting in Settings > Debug > Debug Eden
- Checkbox: ' Save Items Database HTML (items_details_debug/)'
- Disabled by default to prevent unnecessary file creation

IMPLEMENTATION:
1. Config Schema (config_schema.py):
   - Added 'system.debug.save_items_html' (default: False)

2. UI Settings (settings_dialog.py):
   - New checkbox in 'Debug Eden' group
   - Load/Save config value
   - Positioned after Herald & Test Connection HTML options

3. Main App (main.py):
   - Save checkbox state to config on settings apply

4. Items Scraper (items_scraper.py):
   - Conditioned HTML saving with config flag
   - Only saves item_*.html files when enabled
   - Reduced unnecessary I/O operations

5. Translations (Language/*.json):
   - FR: ' Sauvegarder HTML Items Database (items_details_debug/)'
   - EN: ' Save Items Database HTML (items_details_debug/)'
   - DE: ' Gegenstände-Datenbank HTML speichern (items_details_debug/)'

BEHAVIOR:
- Default: No HTML files created (clean Logs/ folder)
- When enabled: Saves HTML for each scraped item in Logs/items_details_debug/
- Useful for diagnosing items database scraping issues
- Consistent with other HTML debug options (Herald, Test Connection)

USE CASE:
User wants to debug item scraping  Enable option  Refresh items  Check HTML files  Disable option

Files: Functions/config_schema.py, Functions/items_scraper.py, UI/settings_dialog.py, main.py, Language/fr.json, Language/en.json, Language/de.json

--- a/Language/de.json
+++ b/Language/de.json
@@ -529,11 +529,13 @@
             "font_scale": "Textgröße",
             "disable_disclaimer": "Startwarnmeldung deaktivieren",
             "debug_save_herald_html": "💾 Herald-HTML speichern (debug_herald_page.html)",
-            "debug_save_test_connection_html": "💾 Verbindungstest-HTML speichern (debug_test_connection.html)"
+            "debug_save_test_connection_html": "💾 Verbindungstest-HTML speichern (debug_test_connection.html)",
+            "debug_save_items_html": "💾 Gegenstände-Datenbank HTML speichern (items_details_debug/)"
         },
         "tooltips": {
             "debug_save_herald_html": "Speichert den HTML-Code der Herald-Seite im Logs/-Ordner zur Diagnose von Scraping-Problemen",
-            "debug_save_test_connection_html": "Speichert den HTML-Code des Herald-Verbindungstests im Logs/-Ordner zur Diagnose von Authentifizierungsproblemen"
+            "debug_save_test_connection_html": "Speichert den HTML-Code des Herald-Verbindungstests im Logs/-Ordner zur Diagnose von Authentifizierungsproblemen",
+            "debug_save_items_html": "Speichert den HTML-Code der Gegenstände-Seiten im Logs/items_details_debug/-Ordner zur Diagnose von Problemen beim Scraping der Gegenstände-Datenbank"
         },
         "dialog_titles": {
             "select_character_folder": "Charakterordner auswählen",
