fix: Settings/Eden section translations (FR/EN/DE)
- Fix hardcoded French text in Cookies Path and Items Cache sections
- All buttons now follow language selection (Clean cache, Clean Eden, Open folder)
- Section titles and info labels properly translated
- Implemented retranslate_ui() in SettingsDialog for live language switching
- Fixed all lang.get() calls to use v2 dotted notation (buttons.*, settings.herald.*)
- Added missing config_cookies_group_title key in all 3 language files
- Settings dialog stays open and updates when language changes

Resolves issue where Eden settings remained in French regardless of language

--- a/Language/en.json
+++ b/Language/en.json
@@ -310,6 +310,7 @@
             "clean_cache_empty_message": "ℹ️ The cache is already empty or doesn't exist.",
             "clean_cache_error_title": "Error",
             "clean_cache_error_message": "❌ Cleaning error:\n\n{error}",
+            "config_cookies_group_title": "Cookies path",
             "config_item_cache_group_title": "Items cache path"
         }
     },
