feat: Personal Items Database with unified import interface
- Add dual-mode database architecture (internal read-only + personal user-managed)
- Unify template import interface (MassImportMonitor for both modes)
- Rename window title to 'Template Import Items Tools'
- Fix backup system to use centralized Backup/Database folder
- Update translations (FR/EN/DE) for unified interface
- Update CHANGELOG v0.108 with clear Items Database System section
- Update technical documentation (ARMORY v2.7)

--- a/Language/de.json
+++ b/Language/de.json
@@ -389,8 +389,7 @@
                 "desc_group_title": "ℹ️ Über",
                 "desc_text": "Die Waffenkammer ermöglicht den Import von Gegenständen aus Zenkcraft-Dateien (.txt) und die Erstellung einer lokalen Gegenstände-Datenbank mit ihren Statistiken, Widerständen, Boni und Händlerinformationen.",
                 "import_group_title": "📥 Gegenstände-Import",
-                "import_button": "📥 Gegenstände aus Zenkcraft importieren",
-                "import_help": "💡 Klicken Sie auf die Schaltfläche oben, um die Import-Oberfläche zu öffnen. Sie können eine Zenkcraft-Vorlagendatei (.txt) auswählen, das Reich wählen und den automatischen Import starten.",
+                "import_button": "📦 Template Import Items Tools",
                 "status_group_title": "📊 Datenbank-Status",
                 "status_location": "📂 Speicherort:",
                 "status_items": "🔢 Verfügbare Gegenstände:",
@@ -399,8 +398,9 @@
                 "status_no_date": "-"
             },
             "mass_import_monitor": {
-                "window_title": "📦 Massenimport",
-                "title": "📦 Massenimport",
+                "window_title": "📦 Template Import Items Tools",
+                "window_title_personal": "🛡️ Template Import Items Tools",
+                "title": "📦 Template Import Items Tools",
                 "stats_group": "📊 Echtzeit-Statistiken",
                 "unique_items": "🔍 Eindeutige Gegenstände:",
                 "variants_found": "🌐 Varianten gefunden:",
@@ -889,8 +889,8 @@
         "confirm_continue": "Fortfahren?",
         "refresh_error": "Aktualisierungsfehler",
         "auto_backup": "Ein automatisches Backup wird erstellt.",
-        "database_import_button": "🔧 Datenbank-Verwaltungstools",
-        "database_import_tooltip": "Datenbank-Verwaltungstools-Fenster öffnen, um Vorlagen in Quell-Datenbank auszuwählen und zu importieren",
+        "database_import_button": "📦 Template Import Items Tools",
+        "database_import_tooltip": "Template Import Items Tools-Fenster öffnen, um Vorlagen in Datenbank auszuwählen und zu importieren",
         "backup_database_button": "💾 Datenbank Sichern",
         "backup_database_tooltip": "Erstellen Sie ein manuelles Backup von items_database_src.json",
         "backup_success_title": "Sicherung Erfolgreich",
