--- a/Language/en.json
+++ b/Language/en.json
@@ -381,8 +381,7 @@
                 "desc_group_title": "ℹ️ About",
                 "desc_text": "The armory allows you to import items from Zenkcraft files (.txt) and create a local items database with their stats, resists, bonuses and merchant information.",
                 "import_group_title": "📥 Items Import",
-                "import_button": "📥 Import items from Zenkcraft",
-                "import_help": "💡 Click the button above to open the import interface. You will be able to select a Zenkcraft template file (.txt), choose the realm and start the automatic import.",
+                "import_button": "📦 Template Import Items Tools",
                 "status_group_title": "📊 Database Status",
                 "status_location": "📂 Location:",
                 "status_items": "🔢 Available items:",
@@ -391,8 +390,9 @@
                 "status_no_date": "-"
             },
             "mass_import_monitor": {
-                "window_title": "🔧 Database Management Tools",
-                "title": "🔧 Database Management Tools",
+                "window_title": "📦 Template Import Items Tools",
+                "window_title_personal": "🛡️ Template Import Items Tools",
+                "title": "📦 Template Import Items Tools",
                 "stats_group": "📊 Real-Time Statistics",
                 "unique_items": "🔍 Unique items:",
                 "variants_found": "🌐 Variants found:",
@@ -889,8 +889,8 @@
         "confirm_continue": "Continue?",
         "refresh_error": "Refresh error",
         "auto_backup": "An automatic backup will be created.",
-        "database_import_button": "🔧 Database Management Tools",
-        "database_import_tooltip": "Open Database Management Tools window to select and import templates into source database",
+        "database_import_button": "📦 Template Import Items Tools",
+        "database_import_tooltip": "Open Template Import Items Tools window to select and import templates into database",
         "backup_database_button": "💾 Backup Database",
         "backup_database_tooltip": "Create a manual backup of items_database_src.json",
         "backup_success_title": "Backup Successful",
