--- a/Language/fr.json
+++ b/Language/fr.json
@@ -389,8 +389,7 @@
                 "desc_group_title": "ℹ️ À propos",
                 "desc_text": "L'armurerie permet d'importer des items depuis des fichiers Zenkcraft (.txt) et de créer une base de données locale d'items avec leurs statistiques, résistances, bonus et informations sur les marchands.",
                 "import_group_title": "📥 Import d'items",
-                "import_button": "📥 Importer des items depuis Zenkcraft",
-                "import_help": "💡 Cliquez sur le bouton ci-dessus pour ouvrir l'interface d'import. Vous pourrez sélectionner un fichier template Zenkcraft (.txt), choisir le royaume et lancer l'import automatique.",
+                "import_button": "📦 Template Import Items Tools",
                 "status_group_title": "📊 État de la base de données",
                 "status_location": "📂 Emplacement:",
                 "status_items": "🔢 Items disponibles:",
@@ -399,8 +398,9 @@
                 "status_no_date": "-"
             },
             "mass_import_monitor": {
-                "window_title": "🔧 Database Management Tools",
-                "title": "🔧 Database Management Tools",
+                "window_title": "📦 Template Import Items Tools",
+                "window_title_personal": "🛡️ Template Import Items Tools",
+                "title": "📦 Template Import Items Tools",
                 "stats_group": "📊 Statistiques en Temps Réel",
                 "unique_items": "🔍 Items uniques:",
                 "variants_found": "🌐 Variantes trouvées:",
@@ -889,8 +889,8 @@
         "confirm_continue": "Continuer ?",
         "refresh_error": "Erreur de rafraîchissement",
         "auto_backup": "Une sauvegarde automatique sera créée.",
-        "database_import_button": "🔧 Outils de Gestion Base de Données",
-        "database_import_tooltip": "Ouvrir la fenêtre Database Management Tools pour sélectionner et importer des templates dans la base source",
+        "database_import_button": "📦 Template Import Items Tools",
+        "database_import_tooltip": "Ouvrir la fenêtre Template Import Items Tools pour sélectionner et importer des templates dans la base de données",
         "backup_database_button": "💾 Sauvegarder la Base de Données",
         "backup_database_tooltip": "Créer une sauvegarde manuelle de items_database_src.json",
         "backup_success_title": "Sauvegarde Réussie",
